Fix CSS for footer on mobile.

--- a/style.css
+++ b/style.css
@@ -271,6 +271,9 @@ nav li a:hover {
     box-shadow:         none;
     padding: 5px 20px 20px 20px;
   }
+  footer {
+    width: 100%;
+  }
   .hero-text {
     margin: auto 20px auto 20px;
   }
@@ -281,6 +284,9 @@ nav li a:hover {
   article {
     width: 100%;
     padding: 5px 20px 20px 20px;
+  }
+  footer {
+    width: 100%;
   }
   .hero-text {
     margin: auto 20px auto 20px;
